--- a/public/locales/vn/login.json
+++ b/public/locales/vn/login.json
@@ -2,5 +2,14 @@
     "nameModule": "Module Quản Lý Quy Trình Tạo Đề Thi",
     "industrial": "TRƯỜNG ĐHCN VIỆT - HUNG",
     "department": "Khoa công nghệ thông tin",
+    "forgetPassword": "Quên mật khẩu",
+    "password": {
+        "label": "Mật khẩu",
+        "placeholder": "Nhập mật khẩu"
+    },
+    "username": {
+        "label": "Email đăng nhập",
+        "placeholder": "Nhập email"
+    },
     "contentPanel": "Mô đun “Quản lý quy trình xây dựng ngân hàng đề thi thực hành cho website Khoa Công nghệ thông tin trường Đại học Công Nghiệp Việt – Hung” là một mô đun được thiết kế cho đối tượng là các giảng viên Khoa công nghệ thông tin nhằm tối ưu hóa và nâng cao quy trình tạo lập, xem xét, và phê duyệt các đề thi và đồ án trong Khoa Công nghệ thông tin của trường ĐHCN Việt – Hung. Mô đun này được tùy chỉnh để đáp ứng các nhu cầu cụ thể của Khoa Công nghệ thông tin, đảm bảo rằng việc chuẩn bị và phê duyệt các tài liệu thi được thực hiện hiệu quả, minh bạch, và tuân thủ các tiêu chuẩn đảm bảo chất lượng."
 }
